# GR00T-WholeBodyControl

./: .envrc  pyproject.toml  run_smpl_eval.sh
sonic_python_inference/: README.md  __init__.py  g1_magicsim_cfg.py  g1_pink_ik_cfg.py  joint_order.py  pink_ik_driver.py  pyproject.toml  sonic_g1_inference.py  sonic_inference.py  sonic_inference_deploy.py  sonic_onnx_pool.py  sonic_planner_pool.py  sonic_smpl_inference.py  sonic_smpl_motion_lib.py
sonic_python_inference/assets/: g1_magicsim.usd  g1_pink_ik.urdf
sonic_python_inference/scripts/: export_dynamic_batch_onnx.py  stage0_planner_only.py  stage1_5_subtests.py  stage1_7_dump.py  stage1_loco_only.py  stage1_loco_only_deploy.py  stage1_loco_only_trainenv.py  stage_g1_eval.py  stage_hybrid_eval.py  stage_hybrid_eval_magicsim.py  stage_hybrid_ik.py  stage_hybrid_ik_magicsim.py  stage_hybrid_kneel.py  stage_hybrid_planner_only.py  stage_robot_eval.py  stage_smpl_eval.py  stage_vr3pt_cube_eval.py  stage_vr3pt_eval.py
