[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic_python_inference"
version = "0.1.0"
description = "SONIC VR 3PT Python inference pipeline (Isaac Lab, batched)"
requires-python = "==3.11.*"
dependencies = [
    # Core numerics
    "numpy>=1.26,<2",
    "torch==2.7.0",
    "torchvision==0.22.0",

    # ONNX runtime + export helpers
    "onnx",
    "onnxruntime-gpu",
    "vector-quantize-pytorch",

    # Unpickling sonic_release/last.pt needs these exact classes
    "trl==0.28.0",
    "transformers>=4.56.2",
    "accelerate>=1.3.0",
    "hydra-core==1.3.2",

    # Isaac Lab (pulls Isaac Sim on first run; ~10 min extension fetch)
    "isaaclab[isaacsim,all]==2.3.2.post1",

    # Optional command sources
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["sonic_python_inference*"]

# Indices (pytorch-cu128, nvidia) and `[tool.uv.sources]` for torch / isaaclab
# live in the root `pyproject.toml` (uv workspace root). Do not duplicate them
# here — uv sync resolves the whole workspace from the root.
